cmake_minimum_required(VERSION 3.30)
project(9_practica_contenedores_toreno_anymz7)

set(CMAKE_CXX_STANDARD 20)

add_executable(9_practica_contenedores_toreno_anymz7 main.cpp
        src/Videojuego.cpp
        src/Videojuego.h
        src/Jugador.cpp
        src/Jugador.h
        src/Torneo.cpp
        src/Torneo.h)
